Javascript added to website

--- a/natours.html
+++ b/natours.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link href="natourscss.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <link href="navbar.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-
 
 
     <title>Title</title>
@@ -37,8 +36,8 @@
         </div>
 
         <div class="line">
-            <h1><span class="ten">OUTDOORS</span></h1>
-            <h1><span class="temper">IS WHERE LIFE HAPPENS</span></h1>
+            <h1><span class="ten animated fadeInLeftBig">OUTDOORS</span></h1>
+            <h1><span class="temper animated fadeInRightBig">IS WHERE LIFE HAPPENS</span></h1>
         </div>
     </header>
 </div>
