Javascript added to website

--- a/natours.html
+++ b/natours.html
@@ -36,8 +36,8 @@
         </div>
 
         <div class="line">
-            <h1><span class="ten animated fadeInLeftBig">OUTDOORS</span></h1>
-            <h1><span class="temper animated fadeInRightBig">IS WHERE LIFE HAPPENS</span></h1>
+            <h1><div class="ten animated bounceInLeft slow">OUTDOORS</div></h1>
+            <h1><div class="temper animated bounceInRight slow">IS WHERE LIFE HAPPENS</div></h1>
         </div>
     </header>
 </div>
