--- a/natours.html
+++ b/natours.html
@@ -8,7 +8,7 @@
 
     <link href="navbar.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-
+    <link rel="stylesheet" href="gridsheet.css">
 
     <title>Title</title>
 </head>
@@ -36,10 +36,60 @@
         </div>
 
         <div class="line">
-            <h1><div class="ten animated bounceInLeft slow">OUTDOORS</div></h1>
-            <h1><div class="temper animated bounceInRight slow">IS WHERE LIFE HAPPENS</div></h1>
+            <h1>
+                <div class="ten animated bounceInLeft slower">OUTDOORS</div>
+            </h1>
+            <h1>
+                <div class="temper animated bounceInRight slower">IS WHERE LIFE HAPPENS</div>
+            </h1>
         </div>
     </header>
+    <div class="section-about">
+        <div class="u-center-text">
+            <h2 class="heading-secondary">
+                "
+                Exciting tours for adventorous people
+                "
+            </h2>
+
+        </div>
+        <div class="row">
+            <div class="section group drd">
+                <div class="col span_1_of_2">
+                    <h3 class="heading-tertiary">You are going to fall in
+                        love with nature</h3>
+                    <p class="paragraph">
+                        "
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur
+                        libero repellat quis consequatur
+                        ducimus quam nisi exercitationem omnis earum qui.
+                        "
+                    </p>
+                    <h3 class="heading-tertiary u-margin">
+                        Live adventures like you
+                        never have before
+                    </h3>
+                    <p class="paragraph">
+
+                        " Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nulla deserunt voluptatum
+                        nam."
+
+                    </p>
+                    <a href="#" class="btn-text">Learn more &#8594;</a>
+                </div>
+                <div class="col span_1_of_2">
+                    <div class="composition">
+                    <img src="img/nat-3.jpg" alt="photo1" class="composition__photo composition__photo--p1">
+                    <img src="img/nat-1.jpg" alt="photo1" class="composition__photo composition__photo--p2">
+                    <img src="img/nat-2.jpg" alt="photo1" class="composition__photo composition__photo--p3">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+</div>
 </div>
 
 </body>
